--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YourName</title>
+    <title>조민우</title>
     <style>
         * {
             margin: 0;
@@ -202,23 +202,20 @@
     </style>
 </head>
 <body>
-    <div class="header">Curriculum Vitae</div>
+
     
     <div class="container">
         <div class="sidebar">
             <div class="profile-img"></div>
-            <div class="profile-name">Your Name</div>
-            <div class="profile-desc">Electronic & Computer Engineering</div>
+            <div class="profile-name">조민우</div>
+            <div class="profile-desc">School of Electrical and Electronic Engineering, Konkuk University</div>
             
             <div class="profile-info">
                 <div>
                     <span>📍</span> Seoul
                 </div>
                 <div>
-                    <span>📧</span> your.email@gmail.com
-                </div>
-                <div>
-                    <span>📱</span> your_github
+                    <span>📧</span> pellyyr3@konkuk.ac.kr
                 </div>
             </div>
         </div>
@@ -227,22 +224,21 @@
             <div class="welcome">
                 <h1>안녕하세요.</h1>
                 <h2>Welcome To My Personal Website :)</h2>
-                <p>Using desktop mode is recommended!</p>
             </div>
 
             <div class="sections">
                 <div class="section">
                     <h3 class="section-title">Study</h3>
                     <div class="section-links">
-                        <a href="https://notion.so/logic-circuits" target="_blank">Logic Circuits</a>
-                        <a href="https://notion.so/computer-architecture" target="_blank">Computer Architecture</a>
-                        <a href="https://notion.so/microprocessor-application" target="_blank">Microprocessor Application</a>
+                        <a href="https://sun-purpose-c0c.notion.site/9790f1ab12eb4c38926583c922dd805f?source=copy_link" target="_blank">Logic Circuits</a>
+                        <a href="https://sun-purpose-c0c.notion.site/793c466d4aa6479f882f0d48447406df?source=copy_link" target="_blank">Computer Architecture</a>
+                        <a href="https://sun-purpose-c0c.notion.site/1ad4f2764313807c9d7dd08e55221ca4?source=copy_link" target="_blank">Microprocessor Application</a>
                         <a href="https://notion.so/ai-accelerator-design" target="_blank">AI Accelerator Design</a>
-                        <a href="https://notion.so/c-programming" target="_blank">C Programming</a>
-                        <a href="https://notion.so/cpp-programming" target="_blank">C++ Programming</a>
+                        <a href="https://sun-purpose-c0c.notion.site/C-c0dc7bc35e174d38be564873ffd9d9ad?source=copy_link" target="_blank">C Programming</a>
+                        <a href="https://sun-purpose-c0c.notion.site/C-ecb580a755d04575b0516e92358db78e?source=copy_link" target="_blank">C++ Programming</a>
                         <a href="deep-learning.html">Deep Learning</a>
-                        <a href="https://notion.so/electronic-circuit-1" target="_blank">Electronic Circuit 1</a>
-                        <a href="https://notion.so/electronic-circuit-2" target="_blank">Electronic Circuit 2</a>
+                        <a href="https://sun-purpose-c0c.notion.site/1-2efff2ce0b8446c982723cb0864208bf?source=copy_link" target="_blank">Electronic Circuit 1</a>
+                        <a href="https://sun-purpose-c0c.notion.site/2-1ad4f2764313806ca6afd10427516199?source=copy_link" target="_blank">Electronic Circuit 2</a>
                     </div>
                 </div>
 
