--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
             <div class="welcome">
                 <h1>안녕하세요.</h1>
                 <h2>Welcome To My Personal Website :)</h2>
+                <p>The Notion page in the Study section of my blog is still quite roughly organized — I appreciate your understanding.</p>
             </div>
 
             <div class="sections">
