--- a/index.html
+++ b/index.html
@@ -217,6 +217,10 @@
                 <div>
                     <span>📧</span> pellyyr3@konkuk.ac.kr
                 </div>
+                <div>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" width="16" style="vertical-align: middle; margin-right: 6px;">
+                    <a href="https://www.instagram.com/your_instagram_username" target="_blank" style="color: #E1306C; text-decoration: none;">
+                </div>
             </div>
         </div>
 
