--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>조민우</title>
+    <title>m1nwoooo</title>
     <style>
         * {
             margin: 0;
@@ -220,6 +220,8 @@
                 <div>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" width="16" style="vertical-align: middle; margin-right: 6px;">
                     <a href="https://www.instagram.com/your_instagram_username" target="_blank" style="color: #E1306C; text-decoration: none;">
+                        @m1nwoooo
+                    </a>
                 </div>
             </div>
         </div>
@@ -228,7 +230,8 @@
             <div class="welcome">
                 <h1>안녕하세요.</h1>
                 <h2>Welcome To My Personal Website :)</h2>
-                <p>The Notion page in the Study section of my blog is still quite roughly organized — I appreciate your understanding.</p>
+                <p>The Notion page in the Study section of my blog is still quite roughly organize</p>
+                <p>I appreciate your understanding.</p>
             </div>
 
             <div class="sections">
@@ -238,7 +241,7 @@
                         <a href="https://sun-purpose-c0c.notion.site/9790f1ab12eb4c38926583c922dd805f?source=copy_link" target="_blank">Logic Circuits</a>
                         <a href="https://sun-purpose-c0c.notion.site/793c466d4aa6479f882f0d48447406df?source=copy_link" target="_blank">Computer Architecture</a>
                         <a href="https://sun-purpose-c0c.notion.site/1ad4f2764313807c9d7dd08e55221ca4?source=copy_link" target="_blank">Microprocessor Application</a>
-                        <a href="https://notion.so/ai-accelerator-design" target="_blank">AI Accelerator Design</a>
+                        <a href="https://sun-purpose-c0c.notion.site/AI-1d04f27643138045be59d4536503d390?source=copy_link" target="_blank">AI Accelerator Design</a>
                         <a href="https://sun-purpose-c0c.notion.site/C-c0dc7bc35e174d38be564873ffd9d9ad?source=copy_link" target="_blank">C Programming</a>
                         <a href="https://sun-purpose-c0c.notion.site/C-ecb580a755d04575b0516e92358db78e?source=copy_link" target="_blank">C++ Programming</a>
                         <a href="deep-learning.html">Deep Learning</a>
