--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 </div>
                 <div>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" width="16" style="vertical-align: middle; margin-right: 6px;">
-                    <a href="https://www.instagram.com/your_instagram_username" target="_blank" style="color: #E1306C; text-decoration: none;">
+                    <a href="https://www.instagram.com/m1nwoooo" target="_blank" style="color: #E1306C; text-decoration: none;">
                         @m1nwoooo
                     </a>
                 </div>
@@ -229,7 +229,7 @@
         <div class="main-content">
             <div class="welcome">
                 <h1>안녕하세요.</h1>
-                <h2>Welcome To My Personal Website :)</h2>
+                <h2>Welcome To My Website :)</h2>
                 <p>The Notion page in the Study section of my blog is still quite roughly organize</p>
                 <p>I appreciate your understanding.</p>
             </div>
