--- a/index.html
+++ b/index.html
@@ -33,14 +33,7 @@
         }
 
         .profile-img {
-            width: 150px;
-            height: 200px;
-            background: #ddd;
-            margin-bottom: 30px;
-            border-radius: 8px;
-            background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 150 200"><rect width="150" height="200" fill="%23f0f0f0"/><text x="50%" y="50%" text-anchor="middle" fill="%23999" font-size="14">프로필 사진</text></svg>');
-            background-size: cover;
-            background-position: center;
+            background-image: url('your-profile-photo.jpg');
         }
 
         .profile-name {
@@ -229,7 +222,7 @@
         <div class="main-content">
             <div class="welcome">
                 <h1>안녕하세요.</h1>
-                <h2>Welcome To My Website :)</h2>
+                <h2>Welcome To My Personal Website :)</h2>
                 <p>The Notion page in the Study section of my blog is still quite roughly organize</p>
                 <p>I appreciate your understanding.</p>
             </div>
@@ -258,7 +251,7 @@
                         <a href="project-fft-zynq.html">128-point FFT on Xilinx Zynq-7000</a>
                         <a href="project-helmet-system.html">Helmet-Mounted System</a>
                         <a href="project-tictactoe.html">Tic-Tac-Toe Game with Arduino & Python</a>
-                        <a href="https://github.com/your-username" target="_blank">🔗 GitHub Repositories</a>
+                        <a href="https://github.com/m1nwoooo" target="_blank">🔗 GitHub Repositories</a>
                     </div>
                 </div>
             </div>
