--- a/index.html
+++ b/index.html
@@ -30,10 +30,21 @@
             padding: 60px 40px;
             background: #fafafa;
             border-right: 1px solid #eee;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
+        /* --- 수정된 프로필 이미지 스타일 --- */
         .profile-img {
-            background-image: url('your-profile-photo.jpg');
+            width: 150px;
+            height: 150px;
+            border-radius: 50%; /* 이미지를 원형으로 만듭니다 */
+            background-image: url('https://i.namu.wiki/i/qQsgrBztJ0TjeCfCblystFPLffgM4uaBS3XWwEkwdYcSADnbTD-Mt9aw77wG5u8QwpwvY_qVdjCVEpZp2IwANg.webp');
+            background-size: cover; /* 이미지가 영역을 꽉 채우도록 합니다 */
+            background-position: center; /* 이미지가 중앙에 오도록 합니다 */
+            background-repeat: no-repeat; /* 이미지가 반복되지 않도록 합니다 */
+            margin-bottom: 20px;
         }
 
         .profile-name {
@@ -41,18 +52,21 @@
             font-weight: 600;
             color: #2c3e50;
             margin-bottom: 10px;
+            text-align: center;
         }
 
         .profile-desc {
             font-size: 14px;
             color: #7f8c8d;
             margin-bottom: 30px;
+            text-align: center;
         }
 
         .profile-info {
             font-size: 13px;
             color: #666;
             line-height: 1.8;
+            width: 100%;
         }
 
         .profile-info div {
@@ -185,10 +199,11 @@
                 grid-template-columns: 1fr;
                 gap: 40px;
             }
-
+            
+            /* --- 수정된 모바일 프로필 이미지 스타일 --- */
             .profile-img {
                 width: 120px;
-                height: 160px;
+                height: 120px; /* 원형을 유지하기 위해 가로/세로 동일하게 설정 */
                 margin: 0 auto 20px;
             }
         }
