--- a/index.html
+++ b/index.html
@@ -298,6 +298,10 @@
                             <div class="card-icon"><i data-lucide="layers"></i></div>
                             <div class="card-content"><h3>Deep Learning</h3></div>
                         </a>
+                        <a href="https://sun-purpose-c0c.notion.site/1ad4f2764313807c9d7dd08e55221ca4?source=copy_link" target="_blank" class="card">
+                            <div class="card-icon"><i data-lucide="memory-stick"></i></div>
+                            <div class="card-content"><h3>Microprocessor Application</h3></div>
+                        </a>
                         <a href="https://sun-purpose-c0c.notion.site/793c466d4aa6479f882f0d48447406df?source=copy_link" target="_blank" class="card">
                             <div class="card-icon"><i data-lucide="computer"></i></div>
                             <div class="card-content"><h3>Computer Architecture</h3></div>
