--- a/index.html
+++ b/index.html
@@ -282,8 +282,9 @@
 
         <main class="main-content">
             <header class="welcome">
-                <h1>Welcome :)</h1>
-                <p>The Notion page in the Study section of my blog is still quite roughly organize. I appreciate your understanding.</p>
+                <h1>Welcome To My Personal Page:)</h1>
+                <p>(Study) The notion page is something I organized myself based on class content.</p>
+                <p>(Project) Please refer to the document in docx format.</p>
             </header>
 
             <div class="sections-container">
@@ -293,10 +294,6 @@
                         <a href="https://sun-purpose-c0c.notion.site/AI-1d04f27643138045be59d4536503d390?source=copy_link" target="_blank" class="card">
                             <div class="card-icon"><i data-lucide="brain-circuit"></i></div>
                             <div class="card-content"><h3>AI Accelerator Design</h3></div>
-                        </a>
-                        <a href="deep-learning.html" class="card">
-                            <div class="card-icon"><i data-lucide="layers"></i></div>
-                            <div class="card-content"><h3>Deep Learning</h3></div>
                         </a>
                         <a href="https://sun-purpose-c0c.notion.site/1ad4f2764313807c9d7dd08e55221ca4?source=copy_link" target="_blank" class="card">
                             <div class="card-icon"><i data-lucide="memory-stick"></i></div>
@@ -345,9 +342,14 @@
                             <div class="card-icon"><i data-lucide="bar-chart-big"></i></div>
                             <div class="card-content"><h3>128-point FFT on Xilinx Zynq-7000</h3></div>
                         </a>
+                        
                         <a href="project-helmet-system.html" class="card">
                             <div class="card-icon"><i data-lucide="hard-hat"></i></div>
                             <div class="card-content"><h3>Helmet-Mounted System</h3></div>
+                        </a>
+                        <a href="deep-learning.html" class="card">
+                            <div class="card-icon"><i data-lucide="layers"></i></div>
+                            <div class="card-content"><h3>Deep Learning</h3></div>
                         </a>
                         <a href="project-tictactoe.html" class="card">
                             <div class="card-icon"><i data-lucide="gamepad-2"></i></div>
