--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <aside class="sidebar">
             <div class="profile-img"></div>
             <h1 class="profile-name">조민우</h1>
-            <p class="profile-desc">School of Electrical and Electronic Engineering, Konkuk University</p>
+            <p class="profile-desc">Department of Electrical and Electronic Engineering, Konkuk University</p>
             
             <div class="profile-info">
                 <div class="profile-info-item">
