--- a/project-tnn-accelerator.html
+++ b/project-tnn-accelerator.html
@@ -223,7 +223,7 @@
             <div class="download-section">
                 <div class="download-title">프로젝트 문서 및 코드</div>
                 <div class="download-links">
-                    <a href="https://drive.google.com/drive/folders/1ginGThoiRJvi_BGgbQNYhkX6xOoC6OLz?dmr=1&ec=wgc-drive-hero-goto" class="download-btn" target="_blank">
+                    <a href="https://drive.google.com/file/d/1wL7zl7WRVwH5kQRB-GIsMso_mBDPPssG/view?usp=drive_link" class="download-btn" target="_blank">
                         📄 프로젝트 보고서
                     </a>
                     <a href="https://github.com/m1nwoooo/tnn-accelerator" class="download-btn github-btn" target="_blank">
