--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <header class="welcome">
                 <h1>Welcome To My Personal Page :)</h1>
                 <p>(Study)   The notion page is something I organized myself based on class content.</p>
-                <p>(Project) Please refer to the document in docx format.</p>
+                <p>(Project) Please refer to the report file.</p>
             </header>
 
             <div class="sections-container">
