--- a/project-fft-riscv.html
+++ b/project-fft-riscv.html
@@ -229,7 +229,7 @@
             <div class="download-section">
                 <div class="download-title">프로젝트 문서 및 코드</div>
                 <div class="download-links">
-                    <a href="https://drive.google.com/file/d/YOUR_DOCUMENT_ID/view" class="download-btn" target="_blank">
+                    <a href="https://drive.google.com/file/d/1Vz-WA7yjioYpjfuaUl_mUggWBaO_uU1G/view?usp=drive_link" class="download-btn" target="_blank">
                         📄 프로젝트 보고서
                     </a>
                     <a href="https://github.com/m1nwoooo/fft-riscv" class="download-btn github-btn" target="_blank">
