--- a/index.html
+++ b/index.html
@@ -465,18 +465,25 @@
                                 <p>Zynq 플랫폼 FFT 구현</p>
                             </div>
                         </a>
+                        <a href="project-CUDA.html" class="card">
+                            <div class="card-icon"><i data-lucide="function-square"></i></div>
+                            <div class="card-content">
+                                <h3>CUDA Programming</h3>
+                                <p>CUDA 프로그래밍 공부 및 실습</p>
+                            </div>
+                        </a>
                         <a href="project-helmet-system.html" class="card">
                             <div class="card-icon"><i data-lucide="hard-hat"></i></div>
                             <div class="card-content">
                                 <h3>Helmet-Mounted System</h3>
-                                <p>헬멧 장착형 시스템</p>
+                                <p>캡스톤, 임베디드소프트웨어 경진대회</p>
                             </div>
                         </a>
                         <a href="deep-learning.html" class="card">
                             <div class="card-icon"><i data-lucide="layers"></i></div>
                             <div class="card-content">
                                 <h3>Deep Learning</h3>
-                                <p>딥러닝 프로젝트</p>
+                                <p>NLP, LLM 공부</p>
                             </div>
                         </a>
                         <a href="project-tictactoe.html" class="card">
