--- a/project-CUDA.html
+++ b/project-CUDA.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hardware Accelerator for Tiny Neural Networks</title>
+    <title>CUDA Programming</title>
     <style>
         * {
             margin: 0;
@@ -187,7 +187,7 @@
     <div class="container">
         <div class="header">
             <a href="index.html" class="back-btn">← Back to Projects</a>
-            <h1 class="project-title">Hardware Accelerator for Tiny Neural Networks</h1>
+            <h1 class="project-title">CUDA Programming</h1>
             
             <div class="project-meta">
                 <div class="meta-item">
