--- a/index.html
+++ b/index.html
@@ -435,43 +435,43 @@
                 </div>
                 <div class="section-content">
                     <div class="card-grid">
-                        <a href="project-tnn-accelerator.html" class="card">
+                        <a href="project-tnn-accelerator.html" target="_blank" class="card">
                             <div class="card-content">
                                 <h3>Hardware Accelerator for Tiny Neural Networks</h3>
                                 <p>소형 신경망을 위한 하드웨어 가속기</p>
                             </div>
                         </a>
-                        <a href="project-fft-riscv.html" class="card">
+                        <a href="project-fft-riscv.html" target="_blank" class="card">
                             <div class="card-content">
                                 <h3>64pt FFT Accelerator with RISC-V</h3>
                                 <p>RISC-V 기반 FFT 가속기</p>
                             </div>
                         </a>
-                        <a href="project-fft-zynq.html" class="card">
+                        <a href="project-fft-zynq.html" target="_blank" class="card">
                             <div class="card-content">
                                 <h3>128-point FFT on Xilinx Zynq-7000</h3>
                                 <p>Zynq 플랫폼 FFT 구현</p>
                             </div>
                         </a>
-                        <a href="project-CUDA.html" class="card">
+                        <a href="project-CUDA.html" target="_blank" class="card">
                             <div class="card-content">
                                 <h3>CUDA Programming</h3>
                                 <p>CUDA 프로그래밍 공부 및 실습</p>
                             </div>
                         </a>
-                        <a href="project-helmet-system.html" class="card">
+                        <a href="project-helmet-system.html" target="_blank" class="card">
                             <div class="card-content">
                                 <h3>Helmet-Mounted System</h3>
                                 <p>캡스톤, 임베디드소프트웨어 경진대회</p>
                             </div>
                         </a>
-                        <a href="deep-learning.html" class="card">
+                        <a href="deep-learning.html" target="_blank" class="card">
                             <div class="card-content">
                                 <h3>Deep Learning</h3>
                                 <p>NLP, LLM 공부</p>
                             </div>
                         </a>
-                        <a href="project-tictactoe.html" class="card">
+                        <a href="project-tictactoe.html" target="_blank" class="card">
                             <div class="card-content">
                                 <h3>Tic-Tac-Toe Game with Arduino & Python</h3>
                                 <p>아두이노와 Python을 이용한 게임</p>
