--- a/index.html
+++ b/index.html
@@ -382,26 +382,31 @@
                         <h4>관심 연구 주제</h4>
                         <div class="description">
                             <strong>🚀 딥러닝 가속기 설계</strong><br>
-                            신경망 연산을 효율적으로 처리할 수 있는 전용 하드웨어 가속기 설계에 관심이 있습니다. 특히 Tiny Neural Network를 위한 저전력, 고효율 가속기 개발을 통해 엣지 디바이스에서의 AI 추론 성능을 향상시키는 연구를 진행해왔습니다.
+                            신경망 연산을 효율적으로 처리할 수 있는 전용 하드웨어 가속기 설계에 관심이 있습니다. 특히 Tiny Neural Network를 위한 저전력, 고효율 가속기 개발을 통해 엣지 디바이스에서의 AI 추론 성능을 향상시키는 프로젝트를 경험한 바 있습니다.
+                            <br><br>
+                            <strong>📱 임베디드 소프트웨어 경진대회 & 캡스톤 디자인</strong><br>
+                            "소방관 시야지원 헬멧을 주제로" 임베디드환경(라즈베리파이)에서의 이미지처리, 하드웨어와 소프트웨어의 협업 등을 경험하고 있습니다.
                             <br><br>
                             <strong>⚡ 저전력 SoC (System on Chip)</strong><br>
-                            IoT 및 모바일 환경에서 요구되는 저전력 SoC 설계 및 최적화에 대해 연구하고 있습니다. 전력 효율성과 성능 간의 균형을 맞추는 아키텍처 설계에 특별한 관심을 가지고 있습니다.
+                            IoT 및 모바일 환경에서 요구되는 저전력 SoC 설계 및 최적화에 대해 관심 있습니다. 전력 효율성과 성능 간의 균형을 맞추는 아키텍처 설계에 특별한 관심을 가지고 있습니다.
                             <br><br>
                             <strong>🔧 임베디드 시스템</strong><br>
-                            RISC-V 기반 프로세서와 FPGA를 활용한 실시간 시스템 개발, 디지털 신호 처리(DSP) 하드웨어 구현 등 임베디드 시스템 전반에 걸친 연구를 수행하고 있습니다.
+                            RISC-V 기반 프로세서와 FPGA를 활용한 실시간 시스템 개발,하드웨어 구현 등 임베디드 시스템 전반에 걸친 프로젝트를 진행한 바 있습니다.
+                            <br><br>
+                            <strong>🧟‍♂️ AI 모델</strong><br>
+                            다양한 AI 모델들에 관심있으며 edge device에서의 AI 추론 능력 향상 하드웨어 구현에 관심있습니다.
                         </div>
                     </div>
 
                     <div class="cv-item">
                         <h4>연구실 지원 동기 및 연구 계획</h4>
                         <div class="description">
-                            현재 AI 기술의 급속한 발전과 함께 하드웨어 가속의 중요성이 더욱 커지고 있습니다. 특히 엣지 컴퓨팅 환경에서는 제한된 전력과 면적 내에서 최대의 성능을 끌어내는 것이 핵심 과제입니다.
+                            현재 AI 기술의 급속한 발전과 함께 하드웨어 가속의 중요성이 더욱 커지고 있습니다. 특히 임베디드 환경에서는 제한된 전력과 면적 내에서 최대의 성능을 끌어내는 것이 핵심 과제입니다.
                             <br><br>
                             <strong>연구 목표:</strong><br>
                             • 차세대 AI 가속기 아키텍처 설계 및 검증<br>
                             • 저전력 신경망 추론을 위한 하드웨어-소프트웨어 협업 최적화<br>
                             • RISC-V 기반 커스텀 프로세서 설계를 통한 도메인 특화 가속기 개발<br>
-                            • 실제 응용 분야(자율주행, IoT, 헬스케어)에 적용 가능한 실용적 솔루션 제공
                             <br><br>
                             궁극적으로는 학계와 산업계에서 실제로 활용될 수 있는 혁신적인 하드웨어 솔루션을 개발하여, AI 기술의 대중화와 접근성 향상에 기여하고 싶습니다.
                         </div>
@@ -411,11 +416,11 @@
                         <h4>핵심 역량</h4>
                         <div class="description">하드웨어 설계 및 시스템 개발에 필요한 기술 스택</div>
                         <div class="skills-container">
-                            <span class="skill-tag">C/C++</span>
+                            <span class="skill-tag">C</span>
                             <span class="skill-tag">Python</span>
                             <span class="skill-tag">RISC-V</span>
                             <span class="skill-tag">FPGA</span>
-                            <span class="skill-tag">Verilog/SystemVerilog</span>
+                            <span class="skill-tag">Veriog</span>
                             <span class="skill-tag">Digital Circuit Design</span>
                             <span class="skill-tag">Neural Networks</span>
                             <span class="skill-tag">Hardware Acceleration</span>
@@ -600,3 +605,4 @@
     </script>
 </body>
 </html>
+
