--- a/index.html
+++ b/index.html
@@ -443,43 +443,43 @@
                         <a href="project-tnn-accelerator.html" target="_blank" class="card">
                             <div class="card-content">
                                 <h3>Hardware Accelerator for Tiny Neural Networks</h3>
-                                <p>소형 신경망을 위한 하드웨어 가속기</p>
+                                <p>Hardware Accelerator for Tiny Neural Networks</p>
                             </div>
                         </a>
                         <a href="project-fft-riscv.html" target="_blank" class="card">
                             <div class="card-content">
                                 <h3>64pt FFT Accelerator with RISC-V</h3>
-                                <p>RISC-V 기반 FFT 가속기</p>
+                                <p>64pt FFT Accelerator with RISC-V</p>
                             </div>
                         </a>
                         <a href="project-fft-zynq.html" target="_blank" class="card">
                             <div class="card-content">
                                 <h3>128-point FFT on Xilinx Zynq-7000</h3>
-                                <p>Zynq 플랫폼 FFT 구현</p>
+                                <p>128-point FFT on Xilinx Zynq-7000</p>
                             </div>
                         </a>
                         <a href="project-CUDA.html" target="_blank" class="card">
                             <div class="card-content">
                                 <h3>CUDA Programming</h3>
-                                <p>CUDA 프로그래밍 공부 및 실습</p>
+                                <p>CUDA Programming</p>
                             </div>
                         </a>
                         <a href="project-helmet-system.html" target="_blank" class="card">
                             <div class="card-content">
                                 <h3>Helmet-Mounted System</h3>
-                                <p>캡스톤, 임베디드소프트웨어 경진대회</p>
+                                <p>Helmet-Mounted System</p>
                             </div>
                         </a>
                         <a href="deep-learning.html" target="_blank" class="card">
                             <div class="card-content">
-                                <h3>Deep Learning</h3>
-                                <p>NLP, LLM 공부</p>
+                                <h3>Deep Learning Study</h3>
+                                <p>Deep Learning Study</p>
                             </div>
                         </a>
                         <a href="project-tictactoe.html" target="_blank" class="card">
                             <div class="card-content">
                                 <h3>Tic-Tac-Toe Game with Arduino & Python</h3>
-                                <p>아두이노와 Python을 이용한 게임</p>
+                                <p>Tic-Tac-Toe Game with Arduino & Python</p>
                             </div>
                         </a>
                         <a href="https://github.com/m1nwoooo" target="_blank" class="card">
@@ -605,4 +605,5 @@
     </script>
 </body>
 </html>
+
 
